src/MiniJava/Tests/DriverTests/extends_itself.err
extends_itself.mj:1:0-17: error: Inheritance loop detected: A -> A
    class A extends A {} // should complain
    ^^^^^^^^^^^^^^^^^

1 errors in total.
