src/MiniJava/Tests/DriverTests/extends_itself.mj
class A extends A {} // should complain
